[gd_scene load_steps=14 format=3 uid="uid://bpf0u7vcyc25n"]

[ext_resource type="Texture2D" uid="uid://l3aag57dh5k3" path="res://graphics/player/basic/idle.png" id="1_qhmnl"]
[ext_resource type="Script" uid="uid://3qnssggecayq" path="res://Scenes/hero.gd" id="1_stlmo"]
[ext_resource type="Shader" uid="uid://oiau6rls5ref" path="res://Scenes/flicker.gdshader" id="2_uoxqq"]
[ext_resource type="Texture2D" uid="uid://dttwse04vmn6g" path="res://graphics/player/basic/walk.png" id="3_awl7p"]
[ext_resource type="Texture2D" uid="uid://b2e13xb5o08wx" path="res://graphics/player/gun/idle.png" id="3_j8u8u"]
[ext_resource type="Texture2D" uid="uid://ofg6qdaoq2k6" path="res://graphics/player/gun/walk.png" id="5_b5732"]
[ext_resource type="Texture2D" uid="uid://ooh14rm4vin1" path="res://graphics/bullet/fire.png" id="6_b5732"]
[ext_resource type="AudioStream" uid="uid://c35recw5mh6ba" path="res://audio/synth_laser_03.ogg" id="8_xrphb"]
[ext_resource type="AudioStream" uid="uid://bjku1w0bssa4p" path="res://audio/jump.mp3" id="9_53mpp"]
[ext_resource type="AudioStream" uid="uid://cjqwem0e0t1bb" path="res://audio/shot_01.ogg" id="10_cr2xo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xrphb"]
shader = ExtResource("2_uoxqq")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/amount = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ucn7y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_qhmnl")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_j8u8u")
}],
"loop": true,
"name": &"Idle_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_awl7p")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_b5732")
}],
"loop": true,
"name": &"Jump_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_qhmnl")
}, {
"duration": 12.0,
"texture": ExtResource("3_awl7p")
}, {
"duration": 11.0,
"texture": ExtResource("1_qhmnl")
}],
"loop": true,
"name": &"Walk",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_j8u8u")
}, {
"duration": 12.0,
"texture": ExtResource("5_b5732")
}, {
"duration": 11.0,
"texture": ExtResource("3_j8u8u")
}],
"loop": true,
"name": &"Walk_gun",
"speed": 60.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_stlmo"]
radius = 4.0
height = 14.0

[node name="hero" type="CharacterBody2D" groups=["heroes"]]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_stlmo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_xrphb")
sprite_frames = SubResource("SpriteFrames_ucn7y")
animation = &"Idle_gun"
autoplay = "Idle"
frame_progress = 0.136032

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_stlmo")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)
position_smoothing_enabled = true
position_smoothing_speed = 12.0

[node name="timers" type="Node" parent="."]

[node name="shoot cooldown" type="Timer" parent="timers"]
wait_time = 0.6
one_shot = true

[node name="fireanima" type="Timer" parent="timers"]
wait_time = 0.2
one_shot = true

[node name="dmgtimer" type="Timer" parent="timers"]
wait_time = 0.6
one_shot = true

[node name="fireanim" type="Node2D" parent="."]

[node name="fireleft" type="Sprite2D" parent="fireanim"]
visible = false
position = Vector2(-10.5, 2)
texture = ExtResource("6_b5732")
flip_h = true

[node name="fireright" type="Sprite2D" parent="fireanim"]
visible = false
position = Vector2(10.5, 2)
texture = ExtResource("6_b5732")

[node name="Sound" type="Node2D" parent="."]

[node name="Laser" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("8_xrphb")

[node name="jump" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("9_53mpp")

[node name="damage" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("10_cr2xo")

[connection signal="timeout" from="timers/shoot cooldown" to="." method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="timers/fireanima" to="." method="_on_fireanima_timeout"]
[connection signal="timeout" from="timers/dmgtimer" to="." method="_on_dmgtimer_timeout"]
